<resources>

    <string name="app_name">ProfitCalcApp</string>

    //Generic text
    <string name="text_save">Save</string>
    <string name="text_update">Update</string>
    <string name="text_placeholder_xxxx">XXXX</string>
    <string name="text_placeholder_12x">Profit: XXX, XXX, XXX, XXX</string>
    <string name="text_placeholder_12xph">Profit: XXX, XXX, XXX, XXX.XX / hour</string>
    <string name="text_placeholder_6xph">XXX, XXX / hour</string>
    <string name="text_placeholder_6xpkill">XXX, XXX / kill</string>
    <string name="text_none">None</string>

    //Main activity
    <string name="main_categories_button">Categories</string>
    <string name="main_settings_button">Settings</string>

    //Category activity
    <string name="category_manage_hint_text">Search for a Category</string>

    //Create Category activity
    <string name="create_category_title">Add a Category</string>
    <string name="create_category_name_label">Name:</string>
    <string name="create_category_name_hint">The name to search by</string>
    <string name="create_category_search_entry_hint">Search entries</string>

    //Create Data Entry activity
    <string name="create_data_title">Create Entry</string>
    <string name="create_data_name_label">Name:</string>
    <string name="create_data_name_hint">Summarise</string>
    <string name="create_data_aura_label">Aura:</string>
    <string name="create_data_start_label">Start Wealth:</string>
    <string name="create_Data_start_hint">From Wealth Evaluator</string>
    <string name="create_data_finish_label">Finish Wealth:</string>
    <string name="create_Data_finish_hint">From Wealth Evaluator</string>
    <string name="create_data_kills_label">Kill Count:</string>
    <string name="create_data_kills_hint">ie. 1,234</string>
    <string name="create_data_hours_label">Hours Spent:</string>
    <string name="create_data_hours_hint">ie. 1.75</string>
    <string name="create_data_extra_label">Extra details</string>
    <string name="create_data_extra_hint">Any extra details like inventory, special armour ect.</string>

    //Settings activity
    <string name="settings_toggle_description">Using the Wealth Evaluator? or Entering data manually?</string>
    <string name="settings_toggle_warning">Requires Wealth Evaluator Unlocked</string>
    <string name="settings_toggle_button_off">Using Wealth Evaluator</string>
    <string name="settings_toggle_button_on">Manually enter Gain/Loss</string>

    <string name="settings_aura_details">Total Auras:</string>
    <string name="settings_aura_button">Manage Auras</string>

    <string name="settings_default_details">Total Defaults:</string>
    <string name="settings_default_button">Manage Defaults</string>

    //Aura Management activity
    <string name="aura_manage_title">Auras</string>
    <string name="aura_manage_hint_text">Search for an Aura</string>

    //Create Aura activity
    <string name="create_aura_title">Add an Aura</string>
    <string name="create_aura_name_label">Name:</string>
    <string name="create_aura_name_hint">Enter the name of the Aura</string>

</resources>
